--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,6 +1,19 @@
 
+/* body{ */
+	/* background-color: grey; */
+	/* text-align: center; */
+	/* color: white; */
+	/* background-image: url('Clouds.jpg'); */
+	/* background-repeat: no-repeat; */
+	/* background-size: cover; */
+	/* background-position: center center; */
+	/* background-attachment: fixed; */
+	/* text-shadow: 1px 1px black; */
+	/* font-family: "Times New Roman", Times, serif; */
+	
+/* } */
 body{
-	background-color: grey;
+	background-color: #645b6b;
 	text-align: center;
 	color: white;
 	background-image: url('bg9.jpg');
@@ -10,13 +23,12 @@ body{
 	background-attachment: fixed;
 	text-shadow: 1px 1px black;
 	font-family: "Times New Roman", Times, serif;
-	
 }
 body.book{
 	background-color: grey;
 	text-align: center;
 	color: white;
-	background-image: url('bg9.jpg');
+	background-image: url('bg3.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -27,6 +39,10 @@ body.book{
 }
 h1{
 	font-family: "Times New Roman", Times, serif;
+}
+h1.code{
+	font-family: "Arial", serif;
+	font-size: 30pt;
 }
 h2{
 	font-family: "Times New Roman", Times, serif;
@@ -66,6 +82,7 @@ div.content{
 	height: 300px;
 	justify-content: center;
 	align-items:center;
+	padding:5px;
 }
 div.contentbox{
 	display:flex;
@@ -76,7 +93,7 @@ div.contentbox{
 }
 img.melogo{
 	width: 200%;
-	max-width: 200px;
+	max-width: 150px;
 	margin-top:20px;
 }
 img.logo{
@@ -92,5 +109,4 @@ div.titleemoji{
 }
 a.backtotop{
 	text-shadow:0px 0px black;
-	color:black;
 }
