Fix loading page

--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -16,7 +16,7 @@ body{
 	background-color: #645b6b;
 	text-align: center;
 	color: white;
-	background-image: url('bg9.jpg');
+	/* background-image: url('bg9.jpg'); */
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
