--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -78,11 +78,11 @@ div.content{
 	flex-direction:column;
 	width: 25%;
 	margin: 20px;
-	min-width: 300px;
-	height: 300px;
+	min-width: 40%;
+	min-height: 350px;
 	justify-content: center;
 	align-items:center;
-	padding:5px;
+	/* padding:10px; */
 }
 div.contentbox{
 	display:flex;
