--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -78,8 +78,8 @@ div.content{
 	flex-direction:column;
 	width: 25%;
 	margin: 20px;
-	min-width: 450px;
-	width: 40%;
+	width: 70%;
+	max-width: 500px;
 	min-height: 350px;
 	justify-content: center;
 	align-items:center;
