--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,19 +1,18 @@
 
-/* body{ */
-	/* background-color: grey; */
-	/* text-align: center; */
-	/* color: white; */
-	/* background-image: url('Clouds.jpg'); */
-	/* background-repeat: no-repeat; */
-	/* background-size: cover; */
-	/* background-position: center center; */
-	/* background-attachment: fixed; */
-	/* text-shadow: 1px 1px black; */
-	/* font-family: "Times New Roman", Times, serif; */
-	
-/* } */
+body.code{
+	background-color: #4C688C;
+	text-align: center;
+	color: white;
+	background-image: url('bg9.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+	text-shadow: 1px 1px black;
+	font-family: "Times New Roman", Times, serif;
+}
 body{
-	background-color: #645b6b;
+	background-color: #4C688C;
 	text-align: center;
 	color: white;
 	/* background-image: url('bg9.jpg'); */
@@ -61,6 +60,13 @@ div.allthings{
 	flex-direction: column;
 	justify-content: center;
 }
+div.formbox{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
 div.header{
 	background-color: rgba(0, 0, 0, 0.001);
 	width: 80%;
@@ -68,9 +74,22 @@ div.header{
 }
 div.header2{
 	background-color: rgba(0, 0, 0, 0.5);
-	width: 75%;
+	width: 80%;
 	margin:20px;
 	margin-bottom:0px;
+	padding: 10px;
+}
+div.header3{
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 80%;
+	margin:20px;
+	margin-bottom:0px;
+	padding:10px;
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	align-items: center;
+	justify-content: space-around;
 }
 div.content{
 	background-color: rgba(0, 0, 0, 0.5);
@@ -98,6 +117,16 @@ img.melogo{
 	max-width: 150px;
 	margin-top:20px;
 }
+img.melogo2{
+	width: 200%;
+	max-width: 100px;
+	margin-top:20px;
+}
+img.placeholder{
+	width: 200%;
+	max-width: 100px;
+	margin-top:20px;
+}
 img.logo{
 	width: 100%;
 	max-width: 100px;
@@ -111,4 +140,12 @@ div.titleemoji{
 }
 a.backtotop{
 	text-shadow:0px 0px black;
+}
+div.logobar{
+	/* width:100%; */
+	display:flex;
+	flex-direction:row;
+	justify-content: space-around;
+	align-items: center;
+	/* background-color: white; */
 }
