--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -66,7 +66,10 @@ div.formbox{
 	flex-direction: column;
 	justify-content: center;
 }
-
+.forminput{
+	width:80%;
+	max-width:500px;
+}
 div.header{
 	background-color: rgba(0, 0, 0, 0.001);
 	width: 80%;
