--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,4 +1,7 @@
-
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
 body.code{
 	background-color: #4C688C;
 	text-align: center;
