--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -52,6 +52,9 @@ h2{
 h3{
 	font-family: "Times New Roman", Times, serif;
 }
+h4{
+	font-family: "Times New Roman", Times, serif;
+}
 p{
 	margin:30px;
 	margin-top:0px;
