--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,7 +1,7 @@
-a:link { text-decoration: none; }
-a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:active { text-decoration: none; }
+a.title:link { text-decoration: none; }
+a.title:visited { text-decoration: none; }
+a.title:hover { text-decoration: none; }
+a.title:active { text-decoration: none; }
 body.code{
 	background-color: #4C688C;
 	text-align: center;
@@ -143,12 +143,21 @@ div.sample{
 	align-items:center;
 	/* padding:10px; */
 }
+div.contentbox2{
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	/* align-items: center; */
+	justify-content: center;
+	width: 80%;
+}
 div.contentbox{
 	display:flex;
 	flex-direction:row;
 	flex-wrap:wrap;
 	/* align-items: center; */
 	justify-content: center;
+	width: 100%;
 }
 img.melogo{
 	width: 200%;
@@ -168,6 +177,11 @@ img.placeholder{
 img.logo{
 	width: 100%;
 	max-width: 100px;
+	margin-top:20px;
+}
+img.logo2{
+	width: 100%;
+	max-width: 300px;
 	margin-top:20px;
 }
 img.figure{
