--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -117,7 +117,7 @@ div.header3{
 	justify-content: space-around;
 }
 div.content{
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgba(0, 0, 0, 0.7);
 	/* flex:2; */
 	display: flex;
 	flex-direction:column;
@@ -135,9 +135,9 @@ div.sample{
 	display: flex;
 	flex-direction:column;
 	margin: 20px;
-	width: 45%;
+	width: 80%;
 	min-width: 250px;
-	max-width: 500px;
+	/* max-width: 500px; */
 	min-height: 350px;
 	justify-content: center;
 	align-items:center;
@@ -181,7 +181,7 @@ img.logo{
 }
 img.logo2{
 	width: 100%;
-	max-width: 300px;
+	max-width: 500px;
 	margin-top:20px;
 }
 img.figure{
