--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -82,30 +82,32 @@ div.formbox{
 }
 div.header{
 	background-color: rgba(0, 0, 0, 0.001);
-	width: 80%;
-	margin:20px;
+	width: 75%;
+	/* margin:20px; */
+	padding:10px; 
+	margin-bottom:0px;
 }
 div.header2{
 	background-color: rgba(0, 0, 0, 0.6);
-	width: 80%;
+	width: 75%;
 	margin:20px;
 	margin-bottom:0px;
 	padding: 10px;
 }
-div.header3{
-	background-color: rgba(0, 0, 0, 0.6);
-	width: 80%;
-	margin:20px;
-	margin-bottom:0px;
-	padding: 10px;
-	display: flex;
-	align-items: center;
-	flex-direction: row;
+/* div.header3{ */
+	/* background-color: rgba(0, 0, 0, 0.6); */
+	/* width: 75%; */
+	/* margin:20px; */
+	/* margin-bottom:0px; */
+	/* padding: 10px; */
+	/* display: flex; */
+	/* align-items: center; */
+	/* flex-direction: row; */
 	/* justify-content: center; */
-}
+/* } */
 div.samplebox{
 	background-color: rgba(0, 0, 0, 0.6);
-	width: 80%;
+	width: 75%;
 	margin:20px;
 	margin-bottom:0px;
 	padding: 10px;
@@ -121,10 +123,11 @@ div.samplescrollbox{
 }
 div.header3{
 	background-color: rgba(0, 0, 0, 0.6);
-	width: 80%;
-	margin:20px;
+	/* width: 75%; */
+	margin:10px;
 	margin-bottom:0px;
-	padding:10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	display:flex;
 	flex-direction:row;
 	flex-wrap:wrap;
@@ -132,18 +135,25 @@ div.header3{
 	justify-content: space-around;
 }
 div.content{
-	background-color: rgba(0, 0, 0, 0.7);
-	/* flex:2; */
-	display: flex;
-	flex-direction:column;
-	margin-top: 20px;
-	width: 80%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 32%;
 	max-width: 500px;
+	min-width: 300px;
 	min-height: 350px;
 	justify-content: center;
-	align-items:center;
-	/* padding:10px; */
-	/* align-self: center; */
+	align-items: center;
+	flex-grow: 1;
+}
+div.contentinner{
+	background-color: rgba(0, 0, 0, 0.7); 
+	margin: 10px;
+	padding: 10px; 
+	display: flex; 
+	flex-direction:column; 
+	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
 div.sample{
 	background-color: rgba(0, 0, 0, 0.6);
@@ -151,7 +161,7 @@ div.sample{
 	display: flex;
 	flex-direction:column;
 	margin: 20px;
-	width: 80%;
+	width: 75%;
 	min-width: 250px;
 	/* max-width: 500px; */
 	min-height: 350px;
@@ -165,15 +175,15 @@ div.contentbox2{
 	flex-wrap:wrap;
 	/* align-items: center; */
 	justify-content: center;
-	width: 80%;
+	width: 75%;
 }
 div.contentbox{
 	display:flex;
 	flex-direction:row;
 	flex-wrap:wrap;
 	/* align-items: center; */
-	justify-content: space-around;
-	width: 85%;
+	justify-content: center;
+	width: 75%;
 }
 img.melogo{
 	width: 200%;
