--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -138,11 +138,12 @@ div.content{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	width: 32%;
-	max-width: 500px;
+	/* max-width: 500px; */
 	min-width: 300px;
 	min-height: 350px;
 	justify-content: center;
 	align-items: center;
+	align-content: stretch;
 	flex-grow: 1;
 }
 div.contentinner{
@@ -153,7 +154,8 @@ div.contentinner{
 	flex-direction:column; 
 	height: 100%;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center; */
+	align-content: stretch;
 }
 div.sample{
 	background-color: rgba(0, 0, 0, 0.6);
@@ -183,6 +185,7 @@ div.contentbox{
 	flex-wrap:wrap;
 	/* align-items: center; */
 	justify-content: center;
+	align-content: stretch;
 	width: 75%;
 }
 img.melogo{
