--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -86,6 +86,9 @@ div.header{
 	/* margin:20px; */
 	padding:10px; 
 	margin-bottom:0px;
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 div.header2{
 	background-color: rgba(0, 0, 0, 0.6);
@@ -113,6 +116,9 @@ div.samplebox{
 	padding: 10px;
 	overflow:auto;
 	max-height:550px;
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 div.samplescrollbox{
 	display:flex;
@@ -133,6 +139,9 @@ div.header3{
 	flex-wrap:wrap;
 	align-items: center;
 	justify-content: space-around;
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 div.content{
 	margin-top: 10px;
@@ -170,6 +179,9 @@ div.sample{
 	justify-content: center;
 	align-items:center;
 	/* padding:10px; */
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 div.contentbox2{
 	display:flex;
@@ -178,6 +190,9 @@ div.contentbox2{
 	/* align-items: center; */
 	justify-content: center;
 	width: 75%;
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 div.contentbox{
 	display:flex;
@@ -187,6 +202,9 @@ div.contentbox{
 	justify-content: center;
 	align-content: stretch;
 	width: 75%;
+	@media only screen and (max-device-width: 480px) { 
+		width: 85%; 
+	}
 }
 img.melogo{
 	width: 200%;
