widen mobile page

--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -86,7 +86,9 @@ div.header{
 	/* margin:20px; */
 	padding:10px; 
 	margin-bottom:0px;
-	@media only screen and (max-device-width: 480px) { 
+}
+@media only screen and (max-device-width: 480px) {
+	div.header{	
 		width: 85%; 
 	}
 }
