--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -122,11 +122,20 @@ div.samplescrollbox{
 	justify-content: space-around;
 }
 div.header3{
-	background-color: rgba(0, 0, 0, 0.6);
+	/* background-color: rgba(0, 0, 0, 0.6); */
+	opacity: 0.7;
+	background: rgba(0, 0, 0, .65) url('bg16.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    /* background-attachment: fixed; */
+	background-blend-mode: darken;
+	
 	/* width: 75%; */
 	margin: 10px;
+	margin-top: 20px;
 	margin-bottom: 0px;
-	padding-top: 20px;
+	padding-top: 40px;
 	padding-bottom: 20px;
 	display: flex;
 	flex-direction: row;
